# web-os

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  build.rs  eslint.config.js  fly.toml  mprocs.yaml  package-lock.json  package.json  rust-toolchain.toml  svelte.config.js  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs  metrics.rs  qemu.rs  webrtc_gateway.rs
crates/kernel/: Cargo.toml  font8x8.in  font8x8_box.in  font8x8_ext_latin.in
crates/kernel/.cargo/: config.toml
crates/kernel/src/: aplic.rs  bio.rs  buddy.rs  condvar.rs  console.rs  defs.rs  dfs.rs  entry.rs  error.rs  exec.rs  fcntl.rs  file.rs  framebuffer.rs  fs.rs  imsic.rs  ipc.rs  kalloc.rs  kernelvec.rs  lib.rs  list.rs  log.rs  main.rs  memlayout.rs  mmap.rs  mpmc.rs  net.rs  null.rs  param.rs  pipe.rs  plic.rs  poll.rs  printf.rs  proc.rs  riscv.rs  runq.rs  semaphore.rs  signal.rs  sleeplock.rs  socket.rs  spinlock.rs  (+15 more)
crates/mkfs/: Cargo.toml
crates/mkfs/src/: main.rs
crates/user/: Cargo.toml  build.rs
crates/user/src/lib/: env.rs  fs.rs  io.rs  ipc.rs  lib.rs  mapreduce.rs  mutex.rs  path.rs  process.rs  seat.rs  signal.rs  socket.rs  stdio.rs  sysinfo.rs  thread.rs  umalloc.rs
src/: app.css  app.html  svelte-vnc.d.ts
src/lib/: rfb.ts
src/routes/: +page.svelte
