[package]
name = "app"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.8.7", features = ["ws"] }
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "net",
] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "service"] }
tokio-tungstenite = "0.28"
futures = "0.3.31"
anyhow = "1.0.100"
tower-http = { version = "0.6.7", features = ["fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4"] }
webrtc = "0.14.0"
ice = { package = "webrtc-ice", version = "0.14.0" }
bytes = "1.10.1"
reqwest = { version = "0.13.1", features = ["json", "rustls-native-certs"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
