[package]
name = "libkernel"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "kernel"
path = "src/lib.rs"
test = true

[[bin]]
name = "libkernel"
path = "src/main.rs"
test = false

[features]
default = ["kernel"]
kernel = []

[dependencies]
