cargo-features = ["per-package-target"]

[package]
name = "uprogs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
forced-target = "riscv64gc-unknown-none-elf"

[lib]
name = "ulib"
path = "src/lib/lib.rs"
test = false

[[bin]]
name = "_cat"
path = "src/bin/cat.rs"
test = false

[[bin]]
name = "_echo"
path = "src/bin/echo.rs"
test = false

[[bin]]
name = "_grep"
path = "src/bin/grep.rs"
test = false

[[bin]]
name = "_init"
path = "src/bin/init.rs"
test = false

[[bin]]
name = "_initcode"
path = "src/bin/initcode.rs"
test = false

[[bin]]
name = "_kill"
path = "src/bin/kill.rs"
test = false

[[bin]]
name = "_ln"
path = "src/bin/ln.rs"
test = false

[[bin]]
name = "_ls"
path = "src/bin/ls.rs"
test = false

[[bin]]
name = "_mkdir"
path = "src/bin/mkdir.rs"
test = false

[[bin]]
name = "_rm"
path = "src/bin/rm.rs"
test = false

[[bin]]
name = "_sh"
path = "src/bin/sh.rs"
test = false

[[bin]]
name = "_wc"
path = "src/bin/wc.rs"
test = false

[[bin]]
name = "_head"
path = "src/bin/head.rs"
test = false

[[bin]]
name = "_clear"
path = "src/bin/clear.rs"
test = false

[[bin]]
name = "_sleep"
path = "src/bin/sleep.rs"
test = false

[[bin]]
name = "_touch"
path = "src/bin/touch.rs"
test = false

[[bin]]
name = "_test_pdual"
path = "src/bin/test_pdual.rs"
test = false

[[bin]]
name = "_test_cow"
path = "src/bin/test_cow.rs"
test = false

[[bin]]
name = "_test_mmap"
path = "src/bin/test_mmap.rs"
test = false

[[bin]]
name = "_test_thread"
path = "src/bin/test_thread.rs"
test = false

[[bin]]
name = "_test_aplic"
path = "src/bin/test_aplic.rs"
test = false

[[bin]]
name = "_test_ktask"
path = "src/bin/test_ktask.rs"
test = false

[[bin]]
name = "_test_fcntl"
path = "src/bin/test_fcntl.rs"
test = false

[[bin]]
name = "_test_poll"
path = "src/bin/test_poll.rs"
test = false

[[bin]]
name = "_test_signal"
path = "src/bin/test_signal.rs"
test = false

[[bin]]
name = "_test_ipc"
path = "src/bin/test_ipc.rs"
test = false

[dependencies]
libkernel = { workspace = true }

[build-dependencies]
libkernel = { workspace = true }
